<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_TcpTask" Id="{4a4e2e36-7fc7-438e-894f-dedd59ed27e6}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_TcpTask :
STRUCT
	TaskName : STRING(24);
	TaskType : INT; (* 0:Once, 1:Regular *)
	TaskData : ARRAY[0..255] OF BYTE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>